--- a/index.html
+++ b/index.html
@@ -36,7 +36,18 @@
 
   <section id="projects">
     <h2>Projects</h2>
-    <p>Coming soon... Stay tuned!</p>
+    <div class="project-card">
+      <h3>To-Do List App</h3>
+      <p>A basic to-do list built using HTML, CSS, and JavaScript. Features include task creation, completion toggling, and persistent storage.</p>
+      <a href="https://github.com/OldMateStretch/PLACEHOLDER" target="_blank">View on GitHub 1</a>
+    </div>
+
+    <div class="project-card">
+      <h3>Responsive Landing Page</h3>
+      <p>A clean, mobile-friendly landing page showcasing responsive design using Flexbox and media queries.</p>
+      <a href="https://github.com/OldMateStretch/PLACEHOLDER" target="_blank">View on GitHub 2</a>
+    </div>
+
   </section>
 
   <section id="contact">
