--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
   <section id="projects">
     <h2>Projects</h2>
+
+  <div class="projects-container">
     <div class="project-card">
       <h3>To-Do List App</h3>
       <p>A basic to-do list built using HTML, CSS, and JavaScript. Features include task creation, completion toggling, and persistent storage.</p>
@@ -47,7 +49,7 @@
       <p>A clean, mobile-friendly landing page showcasing responsive design using Flexbox and media queries.</p>
       <a href="https://github.com/OldMateStretch/PLACEHOLDER" target="_blank">View on GitHub 2</a>
     </div>
-
+  </div>
   </section>
 
   <section id="contact">
