Initialized repo from correct path

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I’m a self-taught developer focused on front-end web development with a passion for clean design and functional UI.</p>
+    <p>I'm a self-taught developer focused on front-end web development with a passion for clean design and functional UI.</p>
   </section>
 
   <section id="skills">
@@ -42,7 +42,7 @@
     <div class="project-card">
       <h3>To-Do List App</h3>
       <p>A basic to-do list built using HTML, CSS, and JavaScript. Features include task creation, completion toggling, and persistent storage.</p>
-      <a href="https://github.com/OldMateStretch/PLACEHOLDER" target="_blank">View on GitHub 1</a>
+      <a href="projects/to-do-list/index.html" target="_blank">View To-Do List App</a>
     </div>
 
     <div class="project-card">
