--- a/.vscode/projects/to-do-list/index.html
+++ b/.vscode/projects/to-do-list/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="main-wrapper">
     <h1>Welcome to the To-Do List</h1>
+    <button id="theme-toggle">Toggle Theme</button>
 
     <div id="todo-container">
       <input type="text" id="new-task" placeholder="Enter a new task">
@@ -18,5 +19,6 @@
 
     <ul id="task-list"></ul>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
