--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>To-Do List</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to the To-Do List</h1>
-    <div id="todo-container">
-      <input type="text" id="new-task" placeholder="Enter a new task">
-      <button id="add-task">Add Task</button>
-      <button id="clear-tasks">Clear All Tasks</button>
-      <ul id="task-list"></ul>
-    </div>
-    <script src="script.js"></script>
-  </body>
+  <h1>Welcome to the To-Do List</h1>
+  <div id="todo-container">
+    <input type="text" id="new-task" placeholder="Enter a new task">
+    <button id="add-task">Add Task</button>
+    <ul id="task-list"></ul>
+    <button id="clear-tasks">Clear All</button>
+  </div>
+  <script src="script.js"></script>
+</body>
 </html>
