--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -6,14 +6,15 @@
   <title>To-Do List</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="site-body">
   <h1>Welcome to the To-Do List</h1>
   <div id="todo-container">
     <input type="text" id="new-task" placeholder="Enter a new task">
     <button id="add-task">Add Task</button>
-    <ul id="task-list"></ul>
     <button id="clear-tasks">Clear All</button>
   </div>
+  <ul id="task-list"></ul>
+  <button id="theme-toggle">Toggle Theme</button>
   <script src="script.js"></script>
 </body>
 </html>
