Fix link to to-do-list folder in root

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="project-card">
       <h3>To-Do List App</h3>
       <p>A basic to-do list built using HTML, CSS, and JavaScript. Features include task creation, completion toggling, and persistent storage.</p>
-      <a href="projects/to-do-list/index.html" target="_blank">Launch App</a>
+      <a href="to-do-list/index.html" target="_blank">Launch App</a>
     </div>
 
     <div class="project-card">
