--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To-Do List</title>
   <link rel="stylesheet" href="style.css">
+<script>
+  if (localStorage.getItem("theme") === "dark") {
+    document.documentElement.classList.add("dark");
+  }
+</script>
+
 </head>
 <body id="site-body">
   <h1>Welcome to the To-Do List</h1>
