Fix dark mode persistence: add dark class to body

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cameron's Resume</title>
   <link rel="stylesheet" href="style.css" />
-<script>
-  if (localStorage.getItem("theme") === "dark") {
-    document.documentElement.classList.add("dark");
-  }
-</script>
+  <script>
+    if (localStorage.getItem("theme") === "dark") {
+      document.getElementById("site-body").classList.add("dark");
+    }
+  </script>
 
 </head>
 <body id="site-body">
